# Notion-Network-Sync

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: linkedin_scraper.py  main.py  notion_client.py  notion_handler.py  requirements.txt
app/handlers/: gpt_handler.py  linkedin_handler.py
app/prompts/: summarize_notes.txt
common/: gpt_handler.py
k8s/: cronjob.yaml
k8s/linkedin_scraper/: cronjob.yaml  pvc.yaml
k8s/notion_poller/: cronjob.yaml  pvc.yaml
linkedin_scraper/: main.py
linkedin_scraper/config/: cookies.json
src/common/: __init__.py  gpt_handler.py  notion_handler.py  ran_previously_check.py  run-if-not-recent.sh
src/common/prompts/: summarize_notes.txt
src/linkedin_scraper/: .dockerignore  Dockerfile.linkedin-scraper  __init__.py  database_handler.py  linkedin_handler.py  pyproject.toml  scrape.py  scraper.py
src/notion_poller/: .dockerignore  Dockerfile.notion-poller  __init__.py  database_handler.py  poll.py  poller.py  pyproject.toml
